# get-tested

./: CHANGELOG.md  LICENSE  Makefile  README.md  action.sh  action.yml  cabal.project  cabal.release.project  cabal.static.project  common.sh  get-tested-ghc.cabal  get-tested.cabal
.github/: dependabot.yml
.github/scripts/: consolidate_artifacts.sh  create_head_release.sh  validate_setup_commit_hash.sh
.github/workflows/: ci.yml  install-tools.sh  linting.yml  process-binaries.sh  release.yml  test-action.yml
app/: Extract.hs  Main.hs  Types.hs  Utils.hs
app/Command/: Check.hs  Generate.hs
setup-get-tested/: action.yml  setup-get-tested.sh
src/GetTested/: Extract.hs  Types.hs
src/GetTested/CLI/: Types.hs
test/: ExtractTest.hs  Main.hs  Utils.hs
test/fixtures/: one.cabal
