cabal-version:   3.4
name:            get-tested
version:         0.1.9.0
synopsis:        Get the tested-with stanza of your Cabal file

-- description:
homepage:        https://github.com/Kleidukos/get-tested
license:         BSD-3-Clause
license-file:    LICENSE
author:          Hécate Kleidukos
maintainer:      hecate+github@glitchbra.in
tested-with:     GHC ==9.10.2

-- copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    RecordWildCards
    StrictData
    TypeFamilies

  default-language:   GHC2024

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -fprint-potential-instances -Wno-unticked-promoted-constructors
    -Werror=unused-imports -flate-specialise -funbox-strict-fields
    -finline-generics-aggressively -fexpose-all-unfoldings -threaded
    -Wunused-packages

  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

library
  import:          extensions
  import:          ghc-options
  hs-source-dirs:  src

  -- cabal-fmt: expand src/
  exposed-modules:
    GetTested.CLI.Types
    GetTested.Extract
    GetTested.Types

  build-depends:
    , aeson            ^>=2.2
    , base             >=4.19 && <4.22
    , bytestring       >=0.11 && <0.13
    , Cabal-syntax     >=3.10.3 && <3.15
    , effectful        >=2.3 && <2.6
    , nonempty-vector  ^>=0.2.3
    , text             ^>=2.1
    , text-display     ^>=1.0
    , vector           ^>=0.13

executable get-tested
  import:         extensions
  import:         ghc-options
  import:         rts-options
  main-is:        Main.hs
  other-modules:  Paths_get_tested
  build-depends:
    , aeson                 ^>=2.2
    , base                  >=4.19 && <4.22
    , bytestring            >=0.11 && <0.13
    , effectful             >=2.3 && <2.6
    , get-tested
    , optparse-applicative  ^>=0.18
    , text                  ^>=2.1
    , text-display          ^>=1.0
    , vector                ^>=0.13

  hs-source-dirs: app

test-suite get-tested-test
  import:         extensions
  import:         ghc-options
  import:         rts-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    ExtractTest
    Utils

  build-depends:
    , base
    , Cabal-syntax
    , effectful
    , get-tested
    , tasty
    , tasty-hunit
    , tasty-test-reporter
    , vector
